syntax = "proto3";
package evmos.intrarelayer.v1;
import "evmos/intrarelayer/v1/intrarelayer.proto";

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/tharsis/evmos/x/intrarelayer/types";

// GenesisState defines the module's genesis state.
message GenesisState {
    // module parameters
    Params params = 1 [(gogoproto.nullable) = false];
    // registered token pairs
    repeated TokenPair token_pairs = 2 [(gogoproto.nullable) = false];
}

// Params defines the intrarelayer module params
message Params {
    // parameter to enable the intrarelaying of Cosmos coins <--> ERC20 tokens.
    bool enable_intrarelayer = 1;
    // overrides the governance voting period for token pairs proposals
    google.protobuf.Duration  token_pair_voting_period = 2 [
        (gogoproto.stdduration) = true,
        (gogoproto.nullable) = false
    ];
    // parameter to enable the EVM hook to convert an ERC20 token to a Cosmos
    // Coin by transferring the Tokens through a MsgEthereumTx to the
    // ModuleAddress Ethereum address.
    bool enable_e_v_m_hook = 3;
}